# ios-roc

./: .env  .gitignore  .python-version  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
deployment/k8s/dev/: ios-roc-deployment.yml
deployment/keycloak/: realm-config.json
docs/: context.drawio
src/: main.py
src/api/: description.md
src/api/controllers/: app_controller.py  cli_controller.py
src/api/services/: oauth.py  openapi.py
src/application/: settings.py
src/application/commands/: __init__.py  collect_cli_outputs_per_device_command.py  command_handler_base.py  validate_external_dependencies_command.py
src/application/events/integration/: __init__.py  health_check_events.py  output_collection_events.py
src/domain/models/: __init__.py  command_line.py  command_output.py  device.py
src/integration/enums/: __init__.py  _command_line_types.py  collector_types.py  custom_enum.py  interface_authentication_schemes.py
src/integration/models/: __init__.py  collect_cli_output_per_device_command_dto.py  collected_outputs_per_device_dto.py  command_line_dto.py  command_output_dto.py  device_dto.py  healthcheck.py
src/integration/services/: cisco_command_line_collector_base.py  cisco_ios_command_line_collector.py
tests/: test_netmiko.py
