[tool.poetry]
name = "ios-roc"
version = "0.1.0"
description = "The Remote Output Collector for Cisco Classic IOS devices"
authors = ["Bruno van de Werve <bvandewe@cisco.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "github"
url = "https://__token__:<your_github_token>@github.com/<your_username>/<your_repo>/packages"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.6.0"
anyio = "4.2.0"
autopep8 = "2.0.4"
certifi = "2024.2.2"
classy-fastapi = "0.6.1"
click = "8.1.7"
coverage = "7.4.1"
dnspython = "2.5.0"
esdbclient = "1.0.17"
fastapi = "0.109.2"
grpcio = "1.60.1"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.26.0"
idna = "3.6"
iniconfig = "2.0.0"
multipledispatch = "1.0.0"
mypy = "1.8.0"
mypy-extensions = "1.0.0"
netmiko = "^4.4.0"
neuroglia = { version = "0.0.23", source = "github" }
packaging = "23.2"
pluggy = "^1"
protobuf = "4.25.2"
pycodestyle = "2.11.1"
pydantic = "2.6.1"
pydantic-settings = "^2.0.0"
pydantic_core = "2.16.2"
pymongo = "4.6.1"
pytest = "^8.1.1"
python-dotenv = "1.0.1"
Rx = "3.2.0"
sniffio = "1.3.0"
starlette = "0.36.3"
typing_extensions = "4.9.0"
uvicorn = "^0.27"
trio = "^0.24.0"
redis = "^5.0.3"
aioredis = "^2.0.1"
pre-commit = "^3.7.1"
pyjwt = "^2.9.0"
pyhumps = "^3.8.0"
ipaddress = "^1.0.23"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
